# promptdesk

./: README_ADVANCED.md  README_ELITE.md  README_PROFESSIONAL.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  wrangler.toml
app/desktop/: index.html
app/desktop/src/: App.tsx
app/desktop/src-tauri/: Cargo.toml
app/desktop/src/components/: Sidebar.tsx
app/desktop/src/lib/: fileProcessor.ts
app/desktop/src/store/: appStore.ts
app/desktop/src/styles/: animations.css
apps/desktop/: package.json  tailwind.config.js  teste.txt  vite.config.ts  vite.config.ts.timestamp-1780685176571-d90b5a9a5734.mjs  vite.config.web.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: file_processor.rs  llm_client.rs  main.rs
apps/desktop/src/components/: FileDropZone.tsx  ModuleCard.tsx  Sidebar.tsx
apps/desktop/src/data/: agents.ts
apps/desktop/src/lib/: llmClient.ts
apps/desktop/src/mocks/: tauri-api.ts  tauri-dialog.ts  tauri-fs.ts  tauri-invoke.ts  tauri-shell.ts  tauri.ts
apps/desktop/src/pages/: AgentGallery.tsx  ChatHistory.tsx  Dashboard.tsx  LLMResult.tsx  Playground.tsx  ProjectBuilder.tsx  PromptHub.tsx  PromptMasterBuilder.tsx  Settings.tsx
apps/desktop/src/store/: settingsStore.ts
apps/desktop/src/styles/: globals.css
apps/proxy/: package.json  wrangler.toml
apps/proxy/src/: index.ts
